crates/nirvash-macros/tests/fixtures/function_like_bool_macros_invalid.stderr
error: unsupported nirvash expression; supported forms are `!`, unary `-`, `&&`, `||`, `==`, `!=`, `<`, `<=`, `>`, `>=`, `+`, binary `-`, `*`, `if/else`, `matches!(..)`, field reads, struct update, function/method calls, and parentheses
 --> tests/fixtures/function_like_bool_macros_invalid.rs:9:41
  |
9 |     let _ = nirvash_expr!(bad(state) => state.ready ^ state.ready);
  |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^
