crates/nirvash-macros/tests/fixtures/function_like_bool_macros_invalid.rs
use nirvash_macros::nirvash_expr;

#[derive(Clone, Debug)]
struct State {
    ready: bool,
}

fn main() {
    let _ = nirvash_expr!(bad(state) => state.ready ^ state.ready);
}
